# dab_template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MAINTENANCE.md  Makefile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy-dev.yml  deploy-prod.yml
data_catalog_infra/: databricks.yml
data_catalog_infra/resources/: schemas.yml
source_code_placeholder/: databricks.yml  pyproject.toml
source_code_placeholder/resources/: sample_job.job.yml
source_code_placeholder/tests/: test_smoke.py
src/: entrypoint.py
