[project]
name = "dab-template"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 127
target-version = "py310"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
