[project]
name = "source_code_placeholder"
version = "0.0.1"
requires-python = ">=3.10,<3.13"
dependencies = []

[project.scripts]
main = "source_code_placeholder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
exclude = ["^\\.venv/", "^build/", "^dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=source_code_placeholder --cov-report=term-missing"
